fix vn country locale

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,193 +1,206 @@
 {
-    "24_hrs": "24 часа",
-    "accept_notifications": "Получать уведомления",
-    "ads": "Реклама",
-    "back_color": "Цвет фона",
-    "base_color": "базовый цвет",
-    "border_color": "Цвет краев",
-    "configuration": "Конфигурация",
-    "contact": "Контакт",
-    "count_news_format": [[0, 0,"%d новости"],[1,1,"новость"],[2,null,"%d новостей"]],
-    "count_places_format": [[0,0,"%d нас. пункты"],[1,1,"o нас. пункты"],[2,null,"+%d нас. пункты"]],
-    "count_views_format": [[0,0,"%d просмотров"],[1,1,"просмотр"],[2,null,"%d просмотров"]],
-    "country_al": "Албания",
-    "country_bg": "Болгария",
-    "country_cz": "Чехия",
-    "country_hu": "Венгрия",
-    "country_in": "Индия",
-    "country_it": "Италия",
-    "country_md": "Молдова",
-    "country_pl": "Польша",
-    "country_ro": "Румыния",
-    "country_ru": "Россия",
-    "country_tr": "Турция",
-    "country_lv": "Латвия",
-    "country_kz": "Казахстан",
-    "daily_horoscope_details_format": "Гороскоп на сегодня %(name)s.",
-    "daily_horoscope_details": "Ежедневный гороскоп. Гороскоп на сегодня и завтра.",
-    "daily_horoscope_format": "Гороскоп: %(name)s",
-    "daily_horoscope": "Ежедневный гороскоп",
-    "daily": "Ежедневно",
-    "date_format": "D MMMM",
-    "day_format": "dddd, D MMMM",
-    "days": "дней",
-    "detailed_horoscope": "Детальный гороскоп",
-    "error_404_info": "Страница не найдена",
-    "error_500_info": "Неизвестная ошибка",
-    "error_description": "Произошла ошибка.",
-    "error": "Ошибка",
-    "events_from_country_format": "События из %(name)s",
-    "events": "События",
-    "exchange_rates": "Курсы валют",
-    "exchange": "Курс валют",
-    "export_horoscope": "Экспорт гороскопов",
-    "forecast_no_data": "Пожалуйста, повторите попытку через несколько минут.",
-    "forecast_on_email_place_format": "Прогноз погоды на вашу электронную почту: %(name)s",
-    "foto_video_from_event_format": "Фото и видео: %(name)s",
-    "generate": "Генерировать",
-    "head_back_color": "название, цвет фона",
-    "head_text_color": "название, цвет текста",
-    "heigth": "Высота",
-    "home": "Главная",
-    "horizontal": "Горизонтально",
-    "horo_api_title": "Экспорт гороскопов",
-    "horoscope_ru_app_name": "Zborg Гороскоп",
-    "horoscope_ru_short_app_name": "Гороскоп",
-    "horoscope_md_app_name": "Click Гороскоп",
-    "horoscope_md_short_app_name": "Гороскоп",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Получает ежедневные уведомления",
-    "horo_on_your_site_info": "Бесплатный ежедневный гороскоп на вашем сайте",
-    "horo_on_your_site": "Гороскоп на вашем сайте",
-    "horo_sign_daily_details_format": "%(sign)s. Гороскоп дня: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Гороскоп дня",
-    "horo_sign_date_format": "D MMM",
-    "horo_sign_weekly_details_format": "%(sign)s. Гороскоп недели: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Еженедельный гороскоп",
-    "horoscope": "Гороскоп",
-    "hour": "Время",
-    "html_code": "HTML",
-    "humidity": "Влажность",
-    "icon_color": "Цвет изобр.",
-    "images": "фото",
-    "important_news_in_last_7days": "Важные новости за последние 7 дней",
-    "important_news": "Важные новости",
-    "important": "Важные",
-    "in_country_md": "Молдова",
-    "in_country_ru": "России",
-    "in_country_kz": "Казахстане",
-    "info": "Информация",
-    "international": "Другие страны",
-    "invalid_email": "Неверный адрес электронной почты!",
-    "item_color": "цвет предмета",
-    "item_conditions": "Состояние атмосферы",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Температура, °C",
-    "item_wind_dir": "Направление ветра",
-    "item_wind_speed_ms": "м/с",
-    "item_wind_speed": "Скорость ветра",
-    "latest_events_from_country_format": "Последние события в %(name)s",
-    "latest_events": "Последние события",
-    "latest_news": "Последние новости",
-    "latest_quotes_in_media_country_format": "Последние заявления/цитаты из прессы - %(country)s",
-    "latest_quotes_in_media": "Последние заявления в прессе",
-    "latest_quotes": "Последние заявления",
-    "line_color": "Цвет линии",
-    "load_more_places": "Другие населенные пункты",
-    "lucky_numbers": "Счастливые номера",
-    "max": "max",
-    "min": "min",
-    "mm": "мм",
-    "more_events": "Другие события",
-    "more_quotes": "Другие заявления",
-    "more": "Больше",
-    "most_important_news_in_last_7days_country_format": "Самые важные новости в прессе за последние 7 дней - %(country)s",
-    "news_ru_app_name": "Zborg Новости",
-    "news_ru_short_app_name": "Новости",
-    "news_md_app_name": "Click Новости",
-    "news_md_short_app_name": "Новости",
-    "news_site_description_format": "Все новости из %(country)s. События, заявления, тенденции.",
-    "news_site_title_format": "Новости: %(country)s",
-    "news_sources": "Источники новостей",
-    "news_topic_description_format": "%(name)s - Последние новости, события и дискуссии в прессе",
-    "news_topic_page_title_format": "%(name)s - Последние новости",
-    "news": "Новости",
-    "no_days": "Дни",
-    "no_thanks": "Нет, спасибо",
-    "not_found_places": "Мы не нашли никакой местности.",
-    "opinia": "Мнение",
-    "photo": "Фото",
-    "place": "Населенный пункт",
-    "places": "Места",
-    "popular_news": "Популярные новости",
-    "popular": "Популярные",
-    "portal_md_app_name": "Click.md",
-    "portal_md_short_app_name": "Click",
-    "portal_ru_app_name": "Zborg.ru",
-    "portal_ru_short_app_name": "Zborg",
-    "portal_site_description_format": "Все новости из %(country)s. События, заявления, тенденции.",
-    "portal_site_title_format": "Новости: %(country)s",
-    "position": "Позиция",
-    "preview": "Предварительный просмотр",
-    "quotes_about_format": "%(name)s - Заявления",
-    "quotes_by_author_format": "%(name)s - Заявления",
-    "quotes": "Заявления",
-    "read_more_on_source_format": "Читайте на %(name)s",
-    "recent_search": "Недавно искали",
-    "related_news": "Связанные новости",
-    "save": "Сохранить",
-    "search_place_format": "Результаты поиска для: %(name)s",
-    "search_place_in_adm_cn_format": "Поиск города/нас. пункта в %(region)s, %(country)s",
-    "search_place_in_cn_format": "Поиск города/нас. пункта в %(country)s",
-    "search_place": "Поиск города",
-    "search_result_format": "Результаты поиска: %(name)s",
-    "share_on_format": "Отправить на %(name)s",
-    "share_with_your_friends": "Поделись с друзьями",
-    "show_header": "Заголовок",
-    "subscribe_to_daily_notifications": "Подписаться на ежедневные уведомления",
-    "subscribe": "Подписывайся",
-    "temperature": "Температура",
-    "text_color": "цвет текста",
-    "today": "Сегодня",
-    "tomorrow": "Завтра",
-    "topic_events_title_format": "%(name)s - События",
-    "topic_latest_news_format": "%(name)s - Последние новости",
-    "topic_news_title_format": "%(name)s Новости",
-    "topic_quotes_title_format": "%(name)s - Заявления",
-    "total_subscribers_format": "Общее число абонентов: %d",
-    "trending": "Тенденции",
-    "useful": "Полезно",
-    "vertical": "Вертикально",
-    "video_news": "Видео новости",
-    "video": "Видео",
-    "views": "Просмотры",
-    "weather_ru_app_name": "Zborg Погода",
-    "weather_ru_short_app_name": "Погода",
-    "weather_md_app_name": "Click Погода",
-    "weather_md_short_app_name": "Погода",
-    "weather_kz_app_name": "Meteo2 Погода",
-    "weather_kz_short_app_name": "Погода",
-    "weather_cright": "Прогноз погоды предоставляемый MET Norway",
-    "weather_for_10days": "Прогноз погоды на 10 дней",
-    "weather_home_title_format": "Погода в %(name)s на 10 дней",
-    "weather_in_cn_summary_format": "Погода в %(country)s на 10 дней в любом городе",
-    "weather_in_format": "Погода в %(name)s",
-    "weather_notifications_subscribe_for_place_format": "Подписаться на предупреждения о погоде: %(name)s",
-    "weather_on_your_site_info_format": "Вставьте погодные информеры на вашем сайте для любого города/нас. пункта в %(country)s.",
-    "weather_on_your_site": "Погода на вашем сайте",
-    "weather_place_description_format": "Прогноз погоды в %(name1)s, Погода: %(name2)s - сегодня, завтра, на 10 дней",
-    "weather_place_details_info_format": "Погода в %(name1)s прогноз погоды %(name2)s на сегодня, завтра, завтра, 3 дня, 7 дней, 10 дней, в эти дни. Погода в %(name3)s. гисметео",
-    "weather_place_title_format_10days_format": "Погода в %(name1)s, прогноз погоды - %(name2)s, 10 дней",
-    "weather_place_title_format": "Погода в %(name1)s, прогноз погоды - %(name2)s",
-    "weather": "Погода",
-    "weather2": "Прогноз погоды",
-    "weekly_horoscope_details_format": "Еженедельный гороскоп: %(date)s.",
-    "weekly_horoscope_details": "Еженедельный гороскоп. Гороскоп на текущую неделю.",
-    "weekly_horoscope_format": "Еженедельный гороскоп: %(date)s",
-    "weekly_horoscope": "Еженедельный гороскоп",
-    "weekly": "Еженедельно",
-    "width": "Ширина",
-    "love": "Любить",
-    "health": "Здоровье",
-    "success": "Успех",
-    "wind": "Ветер"
+  "24_hrs": "24 часа",
+  "accept_notifications": "Получать уведомления",
+  "ads": "Реклама",
+  "back_color": "Цвет фона",
+  "base_color": "базовый цвет",
+  "border_color": "Цвет краев",
+  "configuration": "Конфигурация",
+  "contact": "Контакт",
+  "count_news_format": [
+    [0, 0, "%d новости"],
+    [1, 1, "новость"],
+    [2, null, "%d новостей"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d нас. пункты"],
+    [1, 1, "o нас. пункты"],
+    [2, null, "+%d нас. пункты"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d просмотров"],
+    [1, 1, "просмотр"],
+    [2, null, "%d просмотров"]
+  ],
+  "country_al": "Албания",
+  "country_bg": "Болгария",
+  "country_cz": "Чехия",
+  "country_hu": "Венгрия",
+  "country_in": "Индия",
+  "country_it": "Италия",
+  "country_md": "Молдова",
+  "country_pl": "Польша",
+  "country_ro": "Румыния",
+  "country_ru": "Россия",
+  "country_tr": "Турция",
+  "country_lv": "Латвия",
+  "country_kz": "Казахстан",
+  "country_vn": "Вьетнам",
+  "daily_horoscope_details_format": "Гороскоп на сегодня %(name)s.",
+  "daily_horoscope_details": "Ежедневный гороскоп. Гороскоп на сегодня и завтра.",
+  "daily_horoscope_format": "Гороскоп: %(name)s",
+  "daily_horoscope": "Ежедневный гороскоп",
+  "daily": "Ежедневно",
+  "date_format": "D MMMM",
+  "day_format": "dddd, D MMMM",
+  "days": "дней",
+  "detailed_horoscope": "Детальный гороскоп",
+  "error_404_info": "Страница не найдена",
+  "error_500_info": "Неизвестная ошибка",
+  "error_description": "Произошла ошибка.",
+  "error": "Ошибка",
+  "events_from_country_format": "События из %(name)s",
+  "events": "События",
+  "exchange_rates": "Курсы валют",
+  "exchange": "Курс валют",
+  "export_horoscope": "Экспорт гороскопов",
+  "forecast_no_data": "Пожалуйста, повторите попытку через несколько минут.",
+  "forecast_on_email_place_format": "Прогноз погоды на вашу электронную почту: %(name)s",
+  "foto_video_from_event_format": "Фото и видео: %(name)s",
+  "generate": "Генерировать",
+  "head_back_color": "название, цвет фона",
+  "head_text_color": "название, цвет текста",
+  "heigth": "Высота",
+  "home": "Главная",
+  "horizontal": "Горизонтально",
+  "horo_api_title": "Экспорт гороскопов",
+  "horoscope_ru_app_name": "Zborg Гороскоп",
+  "horoscope_ru_short_app_name": "Гороскоп",
+  "horoscope_md_app_name": "Click Гороскоп",
+  "horoscope_md_short_app_name": "Гороскоп",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Получает ежедневные уведомления",
+  "horo_on_your_site_info": "Бесплатный ежедневный гороскоп на вашем сайте",
+  "horo_on_your_site": "Гороскоп на вашем сайте",
+  "horo_sign_daily_details_format": "%(sign)s. Гороскоп дня: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Гороскоп дня",
+  "horo_sign_date_format": "D MMM",
+  "horo_sign_weekly_details_format": "%(sign)s. Гороскоп недели: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Еженедельный гороскоп",
+  "horoscope": "Гороскоп",
+  "hour": "Время",
+  "html_code": "HTML",
+  "humidity": "Влажность",
+  "icon_color": "Цвет изобр.",
+  "images": "фото",
+  "important_news_in_last_7days": "Важные новости за последние 7 дней",
+  "important_news": "Важные новости",
+  "important": "Важные",
+  "in_country_md": "Молдова",
+  "in_country_ru": "России",
+  "in_country_kz": "Казахстане",
+  "info": "Информация",
+  "international": "Другие страны",
+  "invalid_email": "Неверный адрес электронной почты!",
+  "item_color": "цвет предмета",
+  "item_conditions": "Состояние атмосферы",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Температура, °C",
+  "item_wind_dir": "Направление ветра",
+  "item_wind_speed_ms": "м/с",
+  "item_wind_speed": "Скорость ветра",
+  "latest_events_from_country_format": "Последние события в %(name)s",
+  "latest_events": "Последние события",
+  "latest_news": "Последние новости",
+  "latest_quotes_in_media_country_format": "Последние заявления/цитаты из прессы - %(country)s",
+  "latest_quotes_in_media": "Последние заявления в прессе",
+  "latest_quotes": "Последние заявления",
+  "line_color": "Цвет линии",
+  "load_more_places": "Другие населенные пункты",
+  "lucky_numbers": "Счастливые номера",
+  "max": "max",
+  "min": "min",
+  "mm": "мм",
+  "more_events": "Другие события",
+  "more_quotes": "Другие заявления",
+  "more": "Больше",
+  "most_important_news_in_last_7days_country_format": "Самые важные новости в прессе за последние 7 дней - %(country)s",
+  "news_ru_app_name": "Zborg Новости",
+  "news_ru_short_app_name": "Новости",
+  "news_md_app_name": "Click Новости",
+  "news_md_short_app_name": "Новости",
+  "news_site_description_format": "Все новости из %(country)s. События, заявления, тенденции.",
+  "news_site_title_format": "Новости: %(country)s",
+  "news_sources": "Источники новостей",
+  "news_topic_description_format": "%(name)s - Последние новости, события и дискуссии в прессе",
+  "news_topic_page_title_format": "%(name)s - Последние новости",
+  "news": "Новости",
+  "no_days": "Дни",
+  "no_thanks": "Нет, спасибо",
+  "not_found_places": "Мы не нашли никакой местности.",
+  "opinia": "Мнение",
+  "photo": "Фото",
+  "place": "Населенный пункт",
+  "places": "Места",
+  "popular_news": "Популярные новости",
+  "popular": "Популярные",
+  "portal_md_app_name": "Click.md",
+  "portal_md_short_app_name": "Click",
+  "portal_ru_app_name": "Zborg.ru",
+  "portal_ru_short_app_name": "Zborg",
+  "portal_site_description_format": "Все новости из %(country)s. События, заявления, тенденции.",
+  "portal_site_title_format": "Новости: %(country)s",
+  "position": "Позиция",
+  "preview": "Предварительный просмотр",
+  "quotes_about_format": "%(name)s - Заявления",
+  "quotes_by_author_format": "%(name)s - Заявления",
+  "quotes": "Заявления",
+  "read_more_on_source_format": "Читайте на %(name)s",
+  "recent_search": "Недавно искали",
+  "related_news": "Связанные новости",
+  "save": "Сохранить",
+  "search_place_format": "Результаты поиска для: %(name)s",
+  "search_place_in_adm_cn_format": "Поиск города/нас. пункта в %(region)s, %(country)s",
+  "search_place_in_cn_format": "Поиск города/нас. пункта в %(country)s",
+  "search_place": "Поиск города",
+  "search_result_format": "Результаты поиска: %(name)s",
+  "share_on_format": "Отправить на %(name)s",
+  "share_with_your_friends": "Поделись с друзьями",
+  "show_header": "Заголовок",
+  "subscribe_to_daily_notifications": "Подписаться на ежедневные уведомления",
+  "subscribe": "Подписывайся",
+  "temperature": "Температура",
+  "text_color": "цвет текста",
+  "today": "Сегодня",
+  "tomorrow": "Завтра",
+  "topic_events_title_format": "%(name)s - События",
+  "topic_latest_news_format": "%(name)s - Последние новости",
+  "topic_news_title_format": "%(name)s Новости",
+  "topic_quotes_title_format": "%(name)s - Заявления",
+  "total_subscribers_format": "Общее число абонентов: %d",
+  "trending": "Тенденции",
+  "useful": "Полезно",
+  "vertical": "Вертикально",
+  "video_news": "Видео новости",
+  "video": "Видео",
+  "views": "Просмотры",
+  "weather_ru_app_name": "Zborg Погода",
+  "weather_ru_short_app_name": "Погода",
+  "weather_md_app_name": "Click Погода",
+  "weather_md_short_app_name": "Погода",
+  "weather_kz_app_name": "Meteo2 Погода",
+  "weather_kz_short_app_name": "Погода",
+  "weather_cright": "Прогноз погоды предоставляемый MET Norway",
+  "weather_for_10days": "Прогноз погоды на 10 дней",
+  "weather_home_title_format": "Погода в %(name)s на 10 дней",
+  "weather_in_cn_summary_format": "Погода в %(country)s на 10 дней в любом городе",
+  "weather_in_format": "Погода в %(name)s",
+  "weather_notifications_subscribe_for_place_format": "Подписаться на предупреждения о погоде: %(name)s",
+  "weather_on_your_site_info_format": "Вставьте погодные информеры на вашем сайте для любого города/нас. пункта в %(country)s.",
+  "weather_on_your_site": "Погода на вашем сайте",
+  "weather_place_description_format": "Прогноз погоды в %(name1)s, Погода: %(name2)s - сегодня, завтра, на 10 дней",
+  "weather_place_details_info_format": "Погода в %(name1)s прогноз погоды %(name2)s на сегодня, завтра, завтра, 3 дня, 7 дней, 10 дней, в эти дни. Погода в %(name3)s. гисметео",
+  "weather_place_title_format_10days_format": "Погода в %(name1)s, прогноз погоды - %(name2)s, 10 дней",
+  "weather_place_title_format": "Погода в %(name1)s, прогноз погоды - %(name2)s",
+  "weather": "Погода",
+  "weather2": "Прогноз погоды",
+  "weekly_horoscope_details_format": "Еженедельный гороскоп: %(date)s.",
+  "weekly_horoscope_details": "Еженедельный гороскоп. Гороскоп на текущую неделю.",
+  "weekly_horoscope_format": "Еженедельный гороскоп: %(date)s",
+  "weekly_horoscope": "Еженедельный гороскоп",
+  "weekly": "Еженедельно",
+  "width": "Ширина",
+  "love": "Любить",
+  "health": "Здоровье",
+  "success": "Успех",
+  "wind": "Ветер"
 }
