ournet.bg to our.bg

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -114,8 +114,8 @@
     "places": "Места",
     "popular_news": "Популярни новини",
     "popular": "Популярен",
-    "portal_bg_app_name": "Ournet.bg",
-    "portal_bg_short_app_name": "Ournet",
+    "portal_bg_app_name": "Our.bg",
+    "portal_bg_short_app_name": "Our.bg",
     "portal_site_description_format": "Всички новини от %(country)s. Събития, изявления, тенденции.",
     "portal_site_title_format": "%(country)s новини",
     "position": "Позиция",
