Weather around the world

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -172,6 +172,7 @@
     "weekly_horoscope_details": "Седмичен хороскоп. Хороскоп за текущата седмица.",
     "weekly_horoscope_format": "Седмичен хороскоп: %(date)s",
     "weekly_horoscope": "Седмичен хороскоп",
+    "weather_around_the_world": "Времето по света",
     "weekly": "Седмичен",
     "width": "Широчина",
     "love":"Обичам",
