--- a/locales/en.json
+++ b/locales/en.json
@@ -166,6 +166,7 @@
   "video_news": "Video News",
   "video": "Video",
   "views": "views",
+  "weather_around_the_world": "Weather around the world",
   "weather_in_app_name": "India Weather",
   "weather_in_short_app_name": "Weather",
   "weather_vn_app_name": "Vietnam Weather",
