--- a/locales/hu.json
+++ b/locales/hu.json
@@ -17,6 +17,7 @@
     "country_in": "India",
     "country_it": "Olaszország",
     "country_md": "Moldova",
+    "weather_around_the_world": "Időjárás szerte a világon",
     "country_pl": "Lengyelország",
     "country_ro": "Románia",
     "country_ru": "Oroszország",
