--- a/locales/it.json
+++ b/locales/it.json
@@ -17,6 +17,7 @@
     "country_in": "India",
     "country_it": "Italia",
     "country_md": "Moldavia",
+    "weather_around_the_world": "Meteo nel mondo",
     "country_pl": "Polonia",
     "country_ro": "Romania",
     "country_ru": "Russia",
