--- a/locales/lv.json
+++ b/locales/lv.json
@@ -17,6 +17,7 @@
     "country_in": "Indija",
     "country_it": "Itālija",
     "country_md": "Moldova",
+    "weather_around_the_world": "Laika ziņas visā pasaulē",
     "country_pl": "Polija",
     "country_ro": "Rumānija",
     "country_ru": "Krievija",
