--- a/locales/ro.json
+++ b/locales/ro.json
@@ -27,6 +27,7 @@
     "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
     "daily_horoscope_format": "Horoscop: %(name)s",
     "daily_horoscope": "Horoscopul zilei",
+    "weather_around_the_world": "Vremea în lume",
     "daily": "Zilnic",
     "date_format": "D MMMM",
     "day_format": "dddd, D MMMM",
