--- a/locales/sr.json
+++ b/locales/sr.json
@@ -76,6 +76,7 @@
     "important_news": "Știri importante",
     "important": "Important",
     "in_country_rs": "Srbiji",
+    "weather_around_the_world": "Vreme širom sveta",
     "info": "Info",
     "international": "International",
     "invalid_email": "Nevažeća e-mail!",
