--- a/locales/ru.json
+++ b/locales/ru.json
@@ -36,6 +36,7 @@
   "country_lv": "Латвия",
   "country_kz": "Казахстан",
   "country_vn": "Вьетнам",
+  "weather_around_the_world": "Погода в мире",
   "daily_horoscope_details_format": "Гороскоп на сегодня %(name)s.",
   "daily_horoscope_details": "Ежедневный гороскоп. Гороскоп на сегодня и завтра.",
   "daily_horoscope_format": "Гороскоп: %(name)s",
