--- a/locales/sq.json
+++ b/locales/sq.json
@@ -23,6 +23,7 @@
     "country_tr": "Turqi",
     "country_lv": "Letoni",
     "country_kz": "Kazahstan",
+    "weather_around_the_world": "Moti rreth botës",
     "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
     "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
     "daily_horoscope_format": "Horoscope: %(name)s",
