--- a/locales/tr.json
+++ b/locales/tr.json
@@ -36,6 +36,7 @@
   "country_lv": "Letonya",
   "country_kz": "Kazakistan",
   "country_vn": "Vietnam",
+  "weather_around_the_world": "Dünya çapında hava durumu",
   "daily_horoscope_details_format": "Günlük Burç: %(name)s.",
   "daily_horoscope_details": "Günlük Burç Yorumları. Bugün ve Yarın burç.",
   "daily_horoscope_format": "Burçlar: %(name)s",
