--- a/locales/hr.json
+++ b/locales/hr.json
@@ -36,7 +36,6 @@
   "country_lv": "Latvia",
   "country_kz": "Kazakhstan",
   "country_vn": "Vietnam",
-  "country_hr": "Croatia",
   "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
   "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
   "daily_horoscope_format": "Horoscope: %(name)s",
@@ -85,7 +84,7 @@
   "important_news": "Important news",
   "important": "Important",
   "in_country_in": "India",
-  "in_country_hr": "Vietnam",
+  "in_country_vn": "Vietnam",
   "info": "Info",
   "international": "International",
   "invalid_email": "Invalid Email!",
