--- a/locales/hr.json
+++ b/locales/hr.json
@@ -5,8 +5,8 @@
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
-  "configuration": "Configuration",
-  "contact": "Contact",
+  "configuration": "Konfiguracija",
+  "contact": "Kontakt",
   "count_news_format": [
     [0, 0, "%d news"],
     [1, 1, "a news"],
@@ -45,19 +45,19 @@
   "day_format": "dddd, MMM D",
   "days": "days",
   "detailed_horoscope": "Detailed horoscope",
-  "error_404_info": "The page was not found",
-  "error_500_info": "Unknown error",
-  "error_description": "An error occurred. Try it later.",
-  "error": "Error",
+  "error_404_info": "Stranica nije pronađena",
+  "error_500_info": "Nepoznata pogreška",
+  "error_description": "Dogodila se pogreška. Pokušajte kasnije.",
+  "error": "Greška",
   "events_from_country_format": "Events from %(name)s",
   "events": "Events",
   "exchange_rates": "Exchange rates",
   "exchange": "Exchange",
   "export_horoscope": "Export horoscope",
-  "forecast_no_data": "Please try again in a few minutes.",
-  "forecast_on_email_place_format": "Weather in %(name)s by email.",
+  "forecast_no_data": "Molim pokušajte ponovno za par minuta.",
+  "forecast_on_email_place_format": "Vrijeme u %(name)s mailom",
   "foto_video_from_event_format": "Photo & Video: %(name)s",
-  "generate": "Generate",
+  "generate": "Generirati",
   "head_back_color": "Header back color",
   "head_text_color": "Header text color",
   "heigth": "Height",
@@ -75,26 +75,25 @@
   "horo_sign_weekly_details_format": "%(sign)s. Horoscope of the week: %(date)s",
   "horo_sign_weekly_title_format": "%(sign)s: Weekly Horoscope",
   "horoscope": "Horoscope",
-  "hour": "Hour",
+  "hour": "Sat",
   "html_code": "HTML code",
-  "humidity": "Humidity",
+  "humidity": "Vlažnost",
   "icon_color": "Icon color",
   "images": "Images",
   "important_news_in_last_7days": "Important news for the last 7 days",
   "important_news": "Important news",
   "important": "Important",
-  "in_country_in": "India",
-  "in_country_vn": "Vietnam",
+  "in_country_hr": "Hrvatskoj",
   "info": "Info",
-  "international": "International",
+  "international": "Međunarodni",
   "invalid_email": "Invalid Email!",
   "item_color": "Item color",
-  "item_conditions": "Forecast",
+  "item_conditions": "Prognoza",
   "item_pressure": "mmHg",
-  "item_temperatire": "Temperature, °C",
-  "item_wind_dir": "Wind direction",
+  "item_temperatire": "Temperatura, °C",
+  "item_wind_dir": "Smjer vjetra",
   "item_wind_speed_ms": "m/s",
-  "item_wind_speed": "Wind speed. m/s",
+  "item_wind_speed": "Brzina vjetra. m/s",
   "latest_events_from_country_format": "Latest events in %(name)s",
   "latest_events": "Latest events",
   "latest_news": "Latest news",
@@ -102,7 +101,7 @@
   "latest_quotes_in_media": "Latest statements in the press",
   "latest_quotes": "Latest statements",
   "line_color": "Line color",
-  "load_more_places": "Load more places",
+  "load_more_places": "Učitaj više mjesta",
   "lucky_numbers": "Lucky numbers",
   "max": "max",
   "min": "min",
@@ -121,15 +120,13 @@
   "news": "News",
   "no_days": "No. days",
   "no_thanks": "No, thanks",
-  "not_found_places": "We have not found any place.",
+  "not_found_places": "Nismo pronašli nijedno mjesto.",
   "opinia": "Opinia",
   "photo": "Photo",
-  "place": "Place",
-  "places": "Places",
+  "place": "Mjesto",
+  "places": "Mjesta",
   "popular_news": "Popular News",
   "popular": "Popular",
-  "portal_in_app_name": "Ournet.in",
-  "portal_in_short_app_name": "Ournet",
   "portal_site_description_format": "All news from %(country)s. Events, statements, trends.",
   "portal_site_title_format": "Latest %(country)s News",
   "position": "Position",
@@ -141,20 +138,20 @@
   "recent_search": "Recent searches",
   "related_news": "Related News",
   "save": "Save",
-  "search_place_format": "Search results by: %(name)s",
-  "search_place_in_adm_cn_format": "Search for place in %(region)s, %(country)s",
-  "search_place_in_cn_format": "Search for place in %(country)s",
-  "search_place": "Search for place",
-  "search_result_format": "Results: %(name)s",
-  "share_on_format": "Send on %(name)s",
-  "share_with_your_friends": "Share with your friends",
+  "search_place_format": "Rezultati pretraživanja prema: %(name)s",
+  "search_place_in_adm_cn_format": "Potraži mjesto: %(region)s, %(country)s",
+  "search_place_in_cn_format": "Potraži mjesto: %(country)s",
+  "search_place": "Potraži mjesto",
+  "search_result_format": "Rezultati: %(name)s",
+  "share_on_format": "Pošaljite na %(name)s",
+  "share_with_your_friends": "Podijelite sa svojim prijateljima",
   "show_header": "Show header",
   "subscribe_to_daily_notifications": "Subscribe to daily notifications",
   "subscribe": "Subscribe",
-  "temperature": "Temperature",
+  "temperature": "Temperatura",
   "text_color": "Text color",
-  "today": "Today",
-  "tomorrow": "Tomorrow",
+  "today": "Danas",
+  "tomorrow": "Sutra",
   "topic_events_title_format": "%(name)s - Events",
   "topic_latest_news_format": "%(name)s - Latest News",
   "topic_news_title_format": "News about %(name)s",
@@ -166,25 +163,23 @@
   "video_news": "Video News",
   "video": "Video",
   "views": "views",
-  "weather_around_the_world": "Weather around the world",
-  "weather_in_app_name": "India Weather",
-  "weather_in_short_app_name": "Weather",
-  "weather_hr_app_name": "Vietnam Weather",
-  "weather_hr_short_app_name": "Weather",
-  "weather_cright": "Weather forecast provided by MET Norway",
-  "weather_for_10days": "Weather forecast for 10 days",
-  "weather_home_title_format": "Weather in %(name)s for 10 days",
-  "weather_in_cn_summary_format": "Weather in %(country)s for 10 days in any city",
-  "weather_in_format": "Weather in %(name)s",
-  "weather_notifications_subscribe_for_place_format": "Subscribe to weather alert for %(name)s",
-  "weather_on_your_site_info_format": "Put the weather on your site for any locality in %(country)s.",
-  "weather_on_your_site": "Weather on your site",
-  "weather_place_description_format": "Weather Forecast for %(name1)s, %(name2)s - today, tomorrow, 10 days, 7 days",
-  "weather_place_details_info_format": "Weather in %(name1)s, %(name2)s weather today, tomorrow, 3 days, 7 days, 10 days, 15 days, these days. Forecast for %(name3)s.",
-  "weather_place_title_format_10days_format": "%(name1)s Weather Forecast in %(name2)s, for 10 days",
-  "weather_place_title_format": "%(name1)s Weather Forecast in %(name2)s",
-  "weather": "Weather",
-  "weather2": "Forecast",
+  "weather_around_the_world": "Vrijeme u cijelom svijetu",
+  "weather_hr_app_name": "Vrijeme u Hrvatskoj",
+  "weather_hr_short_app_name": "Vrijeme",
+  "weather_cright": "Vremensku prognozu donosi MET Norway",
+  "weather_for_10days": "Vremenska prognoza za 10 dana",
+  "weather_home_title_format": "%(name)s, vrijeme za 10 dana",
+  "weather_in_cn_summary_format": "%(country)s - vrijeme u za 10 dana u bilo kojem gradu",
+  "weather_in_format": "Vrijeme %(name)s",
+  "weather_notifications_subscribe_for_place_format": "Pretplatite se na vremensku prognozu za %(name)s",
+  "weather_on_your_site_info_format": "Stavite vremensku prognozu na svoju stranicu za bilo koje mjesto u %(country)s.",
+  "weather_on_your_site": "Vrijeme na vašoj stranici",
+  "weather_place_description_format": "Vremenska prognoza za %(name1)s, %(name2)s - danas, sutra, 10 dana, 7 dana",
+  "weather_place_details_info_format": "Vrijeme %(name1)s, %(name2)s vrijeme danas, sutra, 3 dana, 7 dana, 10 dana, 15 dana, ovih dana. Vremenska prognoza za %(name3)s.",
+  "weather_place_title_format_10days_format": "%(name1)s Vremenska prognoza za %(name2)s, za 10 dana",
+  "weather_place_title_format": "%(name1)s Vremenska prognoza za %(name2)s",
+  "weather": "Vrijeme",
+  "weather2": "Prognoza",
   "weekly_horoscope_details_format": "Weekly Horoscope: %(date)s.",
   "weekly_horoscope_details": "Weekly Horoscope. Horoscope for the current week.",
   "weekly_horoscope_format": "Weekly Horoscope: %(date)s",
@@ -194,5 +189,5 @@
   "love": "Love",
   "health": "Health",
   "success": "Success",
-  "wind": "Wind"
+  "wind": "Vjetar"
 }
