--- a/locales/en.json
+++ b/locales/en.json
@@ -86,6 +86,7 @@
   "important": "Important",
   "in_country_in": "India",
   "in_country_hr": "Vietnam",
+  "in_country_ng": "Nigeria",
   "info": "Info",
   "international": "International",
   "invalid_email": "Invalid Email!",
@@ -172,6 +173,8 @@
   "weather_in_short_app_name": "Weather",
   "weather_hr_app_name": "Vietnam Weather",
   "weather_hr_short_app_name": "Weather",
+  "weather_ng_app_name": "Weather Nigeria",
+  "weather_ng_short_app_name": "Weather",
   "weather_cright": "Weather forecast provided by MET Norway",
   "weather_for_10days": "Weather forecast for 10 days",
   "weather_home_title_format": "Weather in %(name)s for 10 days",
